# SurfaceMirror

./: CMakeLists.txt  QPlane.cxx  QPlane.h  README.md  qSlicerSurfaceMirrorModule.cxx  qSlicerSurfaceMirrorModule.h  qSlicerSurfaceMirrorModuleWidget.cxx  qSlicerSurfaceMirrorModuleWidget.h  vtkPlaneExtend.cxx  vtkPlaneExtend.h
Documentation/: SurfaceMirror.dox
Logic/: vtkSlicerSurfaceMirrorLogic.cxx  vtkSlicerSurfaceMirrorLogic.h
Resources/: qSlicerSurfaceMirrorModule.qrc
Resources/UI/: qSlicerSurfaceMirrorFooBarWidget.ui  qSlicerSurfaceMirrorModule.ui
Testing/Cxx/: CMakeLists.txt
Widgets/: qSlicerSurfaceMirrorFooBarWidget.cxx  qSlicerSurfaceMirrorFooBarWidget.h
